--- a/style.css
+++ b/style.css
@@ -2,6 +2,38 @@
   margin: 0;
   padding: 0;
 }
+.main{
+  height: 400px;
+  width: 500px;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: skyblue;
+  border-radius: 20px;
+  
+}
+.dow{
+  visibility: hidden;
+}
+.sty{
+  text-decoration: none;
+  margin-bottom: 10px;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: blue;
+  color: white;
+}
+.err{
+  visibility: hidden;
+  color: red;
+}
+h5{
+  color: red;
+  font-size: 20px;
+}
 .container {
   width: 100%;
   height: 100vh;
@@ -54,6 +86,11 @@ background: linear-gradient(90deg, rgba(36, 18, 25, 1) 26%, rgba(36, 18, 25, 1) 
   background: #4338ca;
 }
 
+h1{
+  margin-bottom: 20px;
+  color: white;
+}
+
 #qr-img {
   width: 400px;
   height: 400px;
@@ -62,7 +99,10 @@ background: linear-gradient(90deg, rgba(36, 18, 25, 1) 26%, rgba(36, 18, 25, 1) 
 }
 @media (max-width:500px){
    .qr input {
-    width: 175px;
+    width: 100px;
+   }
+   .main{
+    width: 90vw;
    }
 }
 
