--- a/style.css
+++ b/style.css
@@ -43,9 +43,10 @@ h5{
   align-items: center;
   background: #f2f2f2;
   font-family: Arial, sans-serif;
-  background: #241219;
-background: linear-gradient(90deg, rgba(36, 18, 25, 1) 26%, rgba(36, 18, 25, 1) 11%, rgba(105, 31, 123, 1) 100%, rgba(41, 41, 194, 1) 100%, rgba(96, 87, 199, 1) 0%, rgba(41, 31, 142, 1) 0%, rgba(122, 14, 230, 1) 0%);
+  background: linear-gradient(135deg, #2e026d, #8a2be2);
 }
+
+
 .qr {
   background: #ffffff;
   padding: 20px;
